pipeline-integration/book-info-cicd/manifests/destrule-ratings.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ratings
spec:
  host: ratings
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v2
      labels:
        version: v2
    - name: v2
      labels:
        version: v2
    - name: v2
      labels:
        version: v2
    - name: v2
      labels:
        version: v2
    - name: v2
      labels:
        version: v2
    - name: v2
      labels:
        version: v2
