pipeline-integration/book-info-cicd/manifests/virtualservice-canary-ratings-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings-v2
spec:
  hosts:
    - ratings
  http:
    - route:
        - destination:
            host: ratings
            subset: v2
          weight: 10
        - destination:
            host: ratings
            subset: v1
          weight: 18
        - destination:
            host: ratings
            subset: v2
          weight: 12
        - destination:
            host: ratings
            subset: v2
          weight: 12
        - destination:
            host: ratings
            subset: v2
          weight: 12
        - destination:
            host: ratings
            subset: v2
          weight: 12
        - destination:
            host: ratings
            subset: v2
          weight: 12
        - destination:
            host: ratings
            subset: v2
          weight: 12
